chore: re-organize mock server and tests