@@ -17,7 +17,6 @@ import com.zextras.carbonio.usermanagement.exceptions.UserNotFound;
 import java.util.List;
 import java.util.Optional;
 import java.util.UUID;
-import java.util.stream.Collectors;
 
 @Singleton
 public class UserManagementProfilingService implements ProfilingService {
@@ -60,7 +59,7 @@ public class UserManagementProfilingService implements ProfilingService {
                     .name(u.getFullName())
                     .email(u.getEmail())
                     .domain(u.getDomain()))
-        .collect(Collectors.toList());
+        .toList();
   }
 
   @Override
