@@ -12,7 +12,6 @@ import com.zextras.carbonio.usermanagement.entities.UserInfo;
 import jakarta.annotation.Nullable;
 import java.util.List;
 import java.util.Optional;
-import java.util.stream.Collectors;
 import org.junit.jupiter.api.extension.ExtensionContext.Store.CloseableResource;
 import org.mockserver.integration.ClientAndServer;
 import org.mockserver.model.ClearType;
@@ -48,18 +47,12 @@ public class UserManagementMockServer extends ClientAndServer implements Closeab
     clear(request, ClearType.LOG);
   }
 
-  @Override
-  public void close() {
-    ChatsLogger.debug("Stopping user management mock...");
-    super.close();
-  }
-
   public HttpRequest getUsersBulkRequest(List<String> usersIds) {
     return request()
         .withMethod("GET")
         .withPath("/users/?")
         .withQueryStringParameters(
-            usersIds.stream().map(p -> Parameter.param("userIds", p)).collect(Collectors.toList()));
+            usersIds.stream().map(p -> Parameter.param("userIds", p)).toList());
   }
 
   public void mockUsersBulk(List<String> usersIds, List<UserInfo> usersInfo, boolean success) {
@@ -67,5 +60,11 @@ public class UserManagementMockServer extends ClientAndServer implements Closeab
     clear(request);
     when(request)
         .respond(HttpResponse.response().withStatusCode(200).withBody(JsonBody.json(usersInfo)));
+  }
+
+  @Override
+  public void close() {
+    ChatsLogger.debug("Stopping user management mock...");
+    super.close();
   }
 }
